infra/helm/skill-forge-ai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devops25-git-it-together-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: gateway
              port:
                number: 8081
